--- a/src/less/include/pic-template.less
+++ b/src/less/include/pic-template.less
@@ -6,6 +6,7 @@
         height: 0;
         padding-bottom: 100%;
         position: relative;
+        z-index: 1;
         overflow: hidden;
         margin: 15px auto;
         background: #f0f0ed;
@@ -20,6 +21,7 @@
     &__img {
         display: block;
         position: absolute;
+        z-index: 2;
         top: 50%;
         left: 50%;
         min-width: 100%;
